force-app/main/default/objects/TestCase__c/fields/Epic_Feature__c.field-meta.xml
<CustomField>
    <fullName>Epic_Feature__c</fullName>
    <description>This field should be used to track the Epic/Feature this test case pertains to, so that it can be easily grouped with additional test cases for a test run.</description>
    <label>Epic/Feature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>