force-app/main/default/objects/TestCase__c/fields/ExpectedResult__c.field-meta.xml
<CustomField>
    <fullName>ExpectedResult__c</fullName>
    <label>Expected Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>