force-app/main/default/objects/TestCase__c/fields/Fail_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Fail_Percentage__c</fullName>
    <formula>Number_of_Failed_Test_Runs__c / Total_Completed_Test_Runs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fail Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>