force-app/main/default/objects/TestCase__c/fields/Most_Recent_Run_Result__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Run_Result__c</fullName>
    <label>Most Recent Run Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Not Tested</fullName>
                <default>true</default>
                <label>Not Tested</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>