force-app/main/default/objects/TestCase__c/fields/Number_of_Incomplete_Test_Runs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Incomplete_Test_Runs__c</fullName>
    <label>Number of Incomplete Test Runs</label>
    <summaryFilterItems>
        <field>TestRunCase__c.IsCompleted__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>TestRunCase__c.TestCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>