force-app/main/default/objects/TestCase__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>This field should be used to track the User/Persona that the tester needs to log in as to complete the test case.</description>
    <label>Persona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>