force-app/main/default/objects/TestCase__c/fields/Pre_Condition__c.field-meta.xml
<CustomField>
    <fullName>Pre_Condition__c</fullName>
    <description>This field should be used to capture the criteria for/type of record that the user should be using for going through the Test Case.</description>
    <inlineHelpText>The description of the record that you need in order to successfully complete this Test Case.</inlineHelpText>
    <label>Pre-Condition</label>
    <type>TextArea</type>
</CustomField>