force-app/main/default/objects/TestCase__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <description>This field should be used to track the Sprint this Test Case needs to be completed with.</description>
    <label>Sprint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>