force-app/main/default/objects/TestCase__c/fields/StartRecordId__c.field-meta.xml
<CustomField>
    <fullName>StartRecordId__c</fullName>
    <inlineHelpText>This is the Record Id where Users will be redirected upon starting the Test Run.</inlineHelpText>
    <label>Start Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>