force-app/main/default/objects/TestCase__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>When the status is NOT COMPLETE, it will be available for Test Run assignment via the flow. When the status is COMPLETE, it will NOT be available for Test Run assignment via the flow.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Complete</fullName>
                <default>true</default>
                <label>Not Complete</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>