force-app/main/default/objects/TestCase__c/fields/StepstoComplete__c.field-meta.xml
<CustomField>
    <fullName>StepstoComplete__c</fullName>
    <label>Steps to Complete</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>