force-app/main/default/objects/TestCase__c/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <description>This field should be used to track the Ticket Id for the corresponding User Story for the Test Case.</description>
    <label>Ticket Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>