force-app/main/default/objects/TestCase__c/fields/Total_Number_of_Test_Runs__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Test_Runs__c</fullName>
    <label>Total Number of Test Runs</label>
    <summaryForeignKey>TestRunCase__c.TestCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>